# s3fm

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs  style.css  ui.rs
src/s3/: providers.rs
