[package]
name = "s3fm"
version = "0.1.0"
description = "S3 file manager"
licence = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
rust-s3 = "0.31.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.0", features = ["full"] }
